[package]
name = "vulka"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vulka"
path = "src/main.rs"

[dependencies]
ash = "0.37.3"
ash-window = "0.12.0"
may = "0.3.42"
num_cpus = "1.16.0"
winit = { version = "0.29", default-features = false, features = ["rwh_05", "x11", "wayland"] }
raw-window-handle = "0.5"
shaderc = "0.8.3"
memoffset = "0.9.0"
glam = "0.25.0"
vma = "0.3.1"
image = { version = "0.24.8", features = ["webp"] }
